correct error, add education

--- a/index.html
+++ b/index.html
@@ -2,15 +2,30 @@
 <html>
   <head>
     <title>Create, instead of consuming </title>
-    <h1>Create, instead of consume <a href="https://github.com/Celthi"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub"></a>
+    <link rel="stylesheet" href="styles/main.css"></link>
+    <img src=""></img>
+    <h1>Create, instead of consuming <a href="https://github.com/Celthi"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub"></a>
 </h1>
     
   </head>
   <body>
+  <header>
+  
+    <nav>
+    <h1>Education</h1>
+  
     <ul>
-      <li>item 1</li>
-      <li>item 2</li>
+      <li>Undergraduate</li>
+      <li id="idspecial">Graduate</li>
     </ul>
+    <strong></strong>
+	</header>
+	<div class="row">
+		<div class="col">col1</div>
+		<div class="col">col2</div>
+		<div class="col">col3</div>
+	</div>
+    <p class="secondary"> dot find class</p>
   </body>
 </html>
 
