--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <header>
     <nav>
-        <a href="CV_卢宪廷_东南大学"> 中文简历</a>
-        <a href="卢宪廷_EN"> CV_ENGLISH</a>
+        <a href="CV_卢宪廷_东南大学.pdf"> 中文简历</a>
+        <a href="卢宪廷_EN.pdf"> CV_ENGLISH</a>
     </nav>
     <h1>Education</h1>
     <ul>
