--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </ul>
     <strong></strong>
 	</header>
+<object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/fish/fish.swf?up_fishColor6=F45540&up_fishColor8=F45540&up_fishColor4=F45540&up_backgroundColor=F0F7FF&up_backgroundImage=http://&up_numFish=5&up_fishColor3=4067F4&up_fishColor2=170503&up_fishName=Fish&up_fishColor9=F45540&up_fishColor7=F45540&up_fishColor1=40F464&up_foodColor=FCB347&up_fishColor10=F45540&up_fishColor5=D0F440&" width="300" height="200"><param name="movie" value="http://cdn.abowman.com/widgets/fish/fish.swf?up_fishColor6=F45540&up_fishColor8=F45540&up_fishColor4=F45540&up_backgroundColor=F0F7FF&up_backgroundImage=http://&up_numFish=5&up_fishColor3=4067F4&up_fishColor2=170503&up_fishName=Fish&up_fishColor9=F45540&up_fishColor7=F45540&up_fishColor1=40F464&up_foodColor=FCB347&up_fishColor10=F45540&up_fishColor5=D0F440&"></param><param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param><param name="scale" value="noscale"/><param name="salign" value="tl"/></object>
     <script type="text/javascript">
         // comment goes here
         /* this comment 
@@ -48,8 +49,8 @@ function testList() {
         fnlist[j]();
     }
 }
-testList();
-        document.write("hey now brown cow");
+//testList();
+        //document.write("hey now brown cow");
     </script>
 
 
