change the suffix

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     </nav>
     <h1>Education</h1>
     <ul>
+        <script> var log = console.log;window.console.log = function() { log(arguments.length>1?arguments[1]:(arguments[0]+1));} console.log(1,2);console.log(1);</script>
+        <script> var x = 1;
+(function(){
+ x =2;
+ y =2;})()
+ //alert(==y) </script>
       <li>Undergraduate</li>
       <li id="idspecial">Graduate</li>
     </ul>
