--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     </ul>
     <strong></strong>
 	</header>
+    <header>My project that that you may want to have a look
+        <li><a href="https://github.com/Celthi/cn_mooc_dl">学堂在线批量下载视频</a></li>
+        <li><a href="https://github.com/Celthi/meltSubtitles">溶解字幕，看美剧记单词利器</a></li>
+        <li><a href="https://greasyfork.org/zh-CN/scripts/27209-ieee-titleaspdffilename">IEEE文件下载命名</a></li>
+
+    </header>
 <object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/fish/fish.swf?up_fishColor6=F45540&up_fishColor8=F45540&up_fishColor4=F45540&up_backgroundColor=F0F7FF&up_backgroundImage=http://&up_numFish=5&up_fishColor3=4067F4&up_fishColor2=170503&up_fishName=Fish&up_fishColor9=F45540&up_fishColor7=F45540&up_fishColor1=40F464&up_foodColor=FCB347&up_fishColor10=F45540&up_fishColor5=D0F440&" width="300" height="200"><param name="movie" value="http://cdn.abowman.com/widgets/fish/fish.swf?up_fishColor6=F45540&up_fishColor8=F45540&up_fishColor4=F45540&up_backgroundColor=F0F7FF&up_backgroundImage=http://&up_numFish=5&up_fishColor3=4067F4&up_fishColor2=170503&up_fishName=Fish&up_fishColor9=F45540&up_fishColor7=F45540&up_fishColor1=40F464&up_foodColor=FCB347&up_fishColor10=F45540&up_fishColor5=D0F440&"></param><param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param><param name="scale" value="noscale"/><param name="salign" value="tl"/></object>
     <script type="text/javascript">
         // comment goes here
