--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <li id="idspecial">Graduate</li>
     </ul>
     <strong></strong>
-    <h1>My project that that you may want to have a look</h1>
+    <h1>My Some Projects</h1>
         <li><a href="https://github.com/Celthi/cn_mooc_dl">学堂在线批量下载视频</a></li>
         <li><a href="https://github.com/Celthi/meltSubtitles">溶解字幕，看美剧记单词利器</a></li>
         <li><a href="https://greasyfork.org/zh-CN/scripts/27209-ieee-titleaspdffilename">IEEE文件下载命名</a></li>
