--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   </head>
   <body>
     <nav>
+        <ul>
+            <li><a href="https://www.zhihu.com/people/lan-tian-89/activities">知乎</a></li>
+            <li><a href="#">微信</a></li>
+        </ul>
     </nav>
     <h1>Education</h1>
     <ul>
