--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <!-- About Section -->
     <section class="success" id="about">
         <div class="container">
-            <h2 class="text-center">About</h2>
+            <h2 class="text-center">Motto</h2>
             <hr class="star-light">
             <div class="row">
                 <div class="col-lg-4 offset-lg-2">
