--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Xianting Lu</title>
-    <meta name="description" content="Website about me, built with VuePress.">
+    <title>Cracking Oysters</title>
+    <meta name="description" content="Vue-powered Static Site Generator">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.cc527c29.css" as="style"><link rel="preload" href="/assets/js/app.2f004ee5.js" as="script"><link rel="preload" href="/assets/js/10.23a08a59.js" as="script"><link rel="prefetch" href="/assets/js/11.86bde3cb.js"><link rel="prefetch" href="/assets/js/12.caae3fee.js"><link rel="prefetch" href="/assets/js/2.9c45053f.js"><link rel="prefetch" href="/assets/js/3.06951db2.js"><link rel="prefetch" href="/assets/js/4.e9b9548c.js"><link rel="prefetch" href="/assets/js/5.5e8d944e.js"><link rel="prefetch" href="/assets/js/6.44285eb2.js"><link rel="prefetch" href="/assets/js/7.b3434012.js"><link rel="prefetch" href="/assets/js/8.38eb62ef.js"><link rel="prefetch" href="/assets/js/9.806e4d0a.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.cc527c29.css">
+    <link rel="preload" href="/assets/css/0.styles.3300b207.css" as="style"><link rel="preload" href="/assets/js/app.7a45ea38.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.1760e2a4.js"><link rel="prefetch" href="/assets/js/12.5992cc77.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.80216183.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.5ee8abf5.js"><link rel="prefetch" href="/assets/js/8.f19422dc.js"><link rel="prefetch" href="/assets/js/9.3fc8988d.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.3300b207.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.2f004ee5.js" defer></script><script src="/assets/js/10.23a08a59.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.7a45ea38.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
   </body>
 </html>
