--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Vue-powered Static Site Generator">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.7b8fbd28.css" as="style"><link rel="preload" href="/assets/js/app.0ed06406.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.9e97f18e.js"><link rel="prefetch" href="/assets/js/12.5992cc77.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.e9c561f1.js"><link rel="prefetch" href="/assets/js/8.596b1b72.js"><link rel="prefetch" href="/assets/js/9.55a8eab9.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.7b8fbd28.css">
+    <link rel="preload" href="/assets/css/0.styles.27e9afa8.css" as="style"><link rel="preload" href="/assets/js/app.b06175b4.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.574a47e2.js"><link rel="prefetch" href="/assets/js/12.c8902afb.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.f7af1bed.js"><link rel="prefetch" href="/assets/js/5.af4ec4c0.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.1f7f4094.js"><link rel="prefetch" href="/assets/js/8.9b7fcb9b.js"><link rel="prefetch" href="/assets/js/9.2165bac9.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.27e9afa8.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.0ed06406.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.b06175b4.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
   </body>
 </html>
