--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Vue-powered Static Site Generator">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.207b725e.css" as="style"><link rel="preload" href="/assets/js/app.1a128a0b.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.5d6dfd16.js"><link rel="prefetch" href="/assets/js/12.c03877d0.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.24d77b68.js"><link rel="prefetch" href="/assets/js/8.4fed0558.js"><link rel="prefetch" href="/assets/js/9.e26f5570.js">
+    <link rel="preload" href="/assets/css/0.styles.207b725e.css" as="style"><link rel="preload" href="/assets/js/app.1712d2c8.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.9f9a94d6.js"><link rel="prefetch" href="/assets/js/12.c03877d0.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.2ccc32a4.js"><link rel="prefetch" href="/assets/js/8.4fed0558.js"><link rel="prefetch" href="/assets/js/9.e26f5570.js">
     <link rel="stylesheet" href="/assets/css/0.styles.207b725e.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.1a128a0b.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.1712d2c8.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
   </body>
 </html>
