--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Vue-powered Static Site Generator">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.b063ece2.css" as="style"><link rel="preload" href="/assets/js/app.83ba6006.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.91ae5d68.js"><link rel="prefetch" href="/assets/js/12.a353b2d5.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.ad36f808.js"><link rel="prefetch" href="/assets/js/8.f19422dc.js"><link rel="prefetch" href="/assets/js/9.05632468.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.b063ece2.css">
+    <link rel="preload" href="/assets/css/0.styles.3300b207.css" as="style"><link rel="preload" href="/assets/js/app.f85a17a7.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.d082278c.js"><link rel="prefetch" href="/assets/js/12.bb243586.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.5f4f47f2.js"><link rel="prefetch" href="/assets/js/8.efb3c72a.js"><link rel="prefetch" href="/assets/js/9.e26f5570.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.3300b207.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.83ba6006.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.f85a17a7.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
   </body>
 </html>
