--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Vue-powered Static Site Generator">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.b063ece2.css" as="style"><link rel="preload" href="/assets/js/app.ce158674.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.bc1cb3c8.js"><link rel="prefetch" href="/assets/js/12.c03877d0.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.13e35f77.js"><link rel="prefetch" href="/assets/js/8.f19422dc.js"><link rel="prefetch" href="/assets/js/9.05632468.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.b063ece2.css">
+    <link rel="preload" href="/assets/css/0.styles.f908427d.css" as="style"><link rel="preload" href="/assets/js/app.0400f348.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.2c58f7e1.js"><link rel="prefetch" href="/assets/js/12.a353b2d5.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.72ac85b2.js"><link rel="prefetch" href="/assets/js/8.1c75b1dc.js"><link rel="prefetch" href="/assets/js/9.3fc8988d.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.f908427d.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.ce158674.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.0400f348.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
   </body>
 </html>
