--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Vue-powered Static Site Generator">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.6c922d5c.css" as="style"><link rel="preload" href="/assets/js/app.1647538f.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.f4636757.js"><link rel="prefetch" href="/assets/js/12.a353b2d5.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.e8877766.js"><link rel="prefetch" href="/assets/js/8.1c75b1dc.js"><link rel="prefetch" href="/assets/js/9.733b7164.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.6c922d5c.css">
+    <link rel="preload" href="/assets/css/0.styles.391740fc.css" as="style"><link rel="preload" href="/assets/js/app.d60f7ea0.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.cb2a6971.js"><link rel="prefetch" href="/assets/js/12.5992cc77.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.175b6f54.js"><link rel="prefetch" href="/assets/js/8.b7dd8cb7.js"><link rel="prefetch" href="/assets/js/9.733b7164.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.391740fc.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.1647538f.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.d60f7ea0.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
   </body>
 </html>
