--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Vue-powered Static Site Generator">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.88b042d5.css" as="style"><link rel="preload" href="/assets/js/app.7e725e1f.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.0cc30c06.js"><link rel="prefetch" href="/assets/js/12.c03877d0.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.f7af1bed.js"><link rel="prefetch" href="/assets/js/5.af4ec4c0.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.175b6f54.js"><link rel="prefetch" href="/assets/js/8.f19422dc.js"><link rel="prefetch" href="/assets/js/9.05632468.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.88b042d5.css">
+    <link rel="preload" href="/assets/css/0.styles.9dbe8e86.css" as="style"><link rel="preload" href="/assets/js/app.3d8a6e59.js" as="script"><link rel="preload" href="/assets/js/11.73363121.js" as="script"><link rel="prefetch" href="/assets/js/10.06471a60.js"><link rel="prefetch" href="/assets/js/12.bb243586.js"><link rel="prefetch" href="/assets/js/13.643d516e.js"><link rel="prefetch" href="/assets/js/2.d6f42a00.js"><link rel="prefetch" href="/assets/js/3.a28516b4.js"><link rel="prefetch" href="/assets/js/4.9f263e94.js"><link rel="prefetch" href="/assets/js/5.93671bdf.js"><link rel="prefetch" href="/assets/js/6.5c588c5d.js"><link rel="prefetch" href="/assets/js/7.0849ecd5.js"><link rel="prefetch" href="/assets/js/8.017584ca.js"><link rel="prefetch" href="/assets/js/9.2165bac9.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.9dbe8e86.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.7e725e1f.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.3d8a6e59.js" defer></script><script src="/assets/js/11.73363121.js" defer></script>
   </body>
 </html>
